# finish/src/main/java/io/openliberty/guides/inventory/InventoryResource.java
@@ -28,8 +28,8 @@ import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
-import org.eclipse.microprofile.openapi.annotations.responses.APIResponses;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponseSchema;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponses;
 import io.openliberty.guides.inventory.model.InventoryList;
 
 @RequestScoped
@@ -48,20 +48,18 @@ public class InventoryResource {
         value = {
             // tag::APIResponse[]
             @APIResponse(
-                responseCode = "404",
+                responseCode = "404", 
                 description = "Missing description",
-                content = @Content(mediaType = "text/plain")),
+                content = @Content(mediaType = "text/plain"))
             // end::APIResponse[]
-            @APIResponse(
-                responseCode = "200",
-                description = "JVM system properties of a particular host.",
-                // tag::Content[]
-                content = @Content(mediaType = "application/json",
-                // end::Content[]
-                // tag::Schema[]
-                schema = @Schema(implementation = Properties.class))) })
-                // end::Schema[]
+        }
+    )
     // end::APIResponses[]
+    //tag::APIResponseSchema[]
+    @APIResponseSchema(value = Properties.class,
+        responseDescription = "JVM system properties of a particular host.",
+        responseCode = "200")
+    // end::APIResponseSchema[]
     // tag::Operation[]
     @Operation(
         summary = "Get JVM system properties for particular host",
@@ -72,19 +70,18 @@ public class InventoryResource {
     public Response getPropertiesForHost(
         // tag::Parameter[]
         @Parameter(
-            description = "The host for whom to retrieve "
-            + "the JVM system properties for.",
-            required = true,
-            example = "foo",
-            schema = @Schema(type = SchemaType.STRING))
+            description = "The host for whom to retrieve the JVM system properties for.",
+            required = true, 
+            example = "foo", 
+            schema = @Schema(type = SchemaType.STRING)) 
         // end::Parameter[]
         @PathParam("hostname") String hostname) {
         // Get properties for host
         Properties props = manager.get(hostname);
         if (props == null) {
             return Response.status(Response.Status.NOT_FOUND)
-                           .entity("{ \"error\" : "
-                                   + "\"Unknown hostname " + hostname
+                           .entity("{ \"error\" : " 
+                                   + "\"Unknown hostname " + hostname 
                                    + " or the resource may not be "
                                    + "running on the host machine\" }")
                            .build();
@@ -98,10 +95,18 @@ public class InventoryResource {
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     // tag::listContents[]
-    // tag::APIResponseSchema[]
-    @APIResponseSchema(value = InventoryList.class,
-        responseDescription = "host:properties pairs stored in the inventory.")
-    // end::APIResponseSchema[]
+    @APIResponse(
+        responseCode = "200",
+        description = "host:properties pairs stored in the inventory.",
+        // tag::Content[]
+        content = @Content(
+            mediaType = "application/json",
+        // end::Content[]
+        // tag::Schema[]
+            schema = @Schema(
+                type = SchemaType.OBJECT,
+                implementation = InventoryList.class)))
+        // end::Schema[]
     @Operation(
         summary = "List inventory contents.",
         description = "Returns the currently stored host:properties pairs in the "
